<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--welcome-->
    <string name="welcome">Welcome to</string>
    <string name="welcome_message_1">On Vose, \n you can anonymously view and share \n information about companies and \n industries that matter to you.</string>
    <string name="welcome_message_2">Swipe to create a completely \n anonymous account and starting \n having your voices heard today! \n you can anonymously view and share \n information about companies and \n industries that matter to you.</string>

    <!--signup/login-->
    <string name="app_name">Vose</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="sign_up_title_1">Join Vose</string>
    <string name="sign_up_title_2">No other info is required, real anonymity</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="continue_button">Continue</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Voice Company Anonymously</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Vose</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="same_password_message" >enter the same password twice...</string>
    <string name="create_account_message" >Creating new account, please wait...</string>
    <string name="verify_account_message" >Verifying your account, please wait...</string>
    <string name="enter_user_name" >enter a user name</string>
    <string name="enter_pass_word" >enter a password</string>
    <string name="agree_rules">*By signing up, you agree to our Terms \u0026 Policies</string>


    <!--OnBoarding-->
    <string name="change_industry_title">Change your default industry</string>
    <string name="set_industry_title">Select your default industry</string>
    <string name="select_industry">Select your interested industry:</string>
    <string name="select_location">Select multiple areas you are interested in</string>
    <string name="empty_location">Please select at least one location</string>
    <string name="start_vose">Start Vose!</string>
    <string name="next">Next</string>
    <string name="restart_voice">Restart Vose!</string>
    <string name="onboarding_progress_message">Loading voices...</string>
    <string name="onboarding_follow_companies">Please follow at least 3 companies</string>
    <!--Industry spinner-->
    <string name="no_following_company_message">"No following company yet, click on star to follow company!"</string>
    <string name="no_following_company_message_title">"No following company yet !"</string>
    <string name="no_following_company_message_sentence">"Click on the          icon next to a company in COMPANIES tab to follow it"</string>
    <!--Tabs-->
    <string name="hot_voices">VOICES</string>
    <string name="hot_companies">COMPANIES</string>
    <string name="following">FOLLOWING</string>


    <!---HotVoices -->
    <string name="loading_posts">Loading... </string>
    <string name="home"></string>
    <string name="no_hot_voices_message">No voices yet, try to change industry filter or make a post</string>
    <string name="already_liked_post">You\'ve already liked this voice</string>

    <!---->
    <string name="likes">Likes </string>
    <string name="comments">Comments </string>

    <!---CompanyPosts -->
    <string name="voices_in_company">Voices in </string>
    <string name="no_voices_in_company">No voice in this company yet, click the pen icon to make a post </string>
    <string name="follow_company">you are following</string>
    <string name="unfollow_company">To unfollow this company? </string>
    <string name="look_into_company">checking voices in</string>
    <string name="no_post_in_company_title">No voice in this company yet</string>
    <string name="no_post_in_company_sentence">"Click on the         icon and be the first one to make a post !"</string>

    <!--make post-->
    <string name="make_a_post"> Share your voice!</string>

    <!--select company to post-->
    <string name="select_company_to_post_title"> Select company to post</string>

    <!--action bar-->
    <string name="action_back">back.</string>
    <string name="action_post"></string>
    <string name="action_change_industry">Change Industry</string>
    <string name="action_create_company">Suggest Company</string>
    <string name="action_my_posts">My Voices</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_rules">Terms \u0026 Policies</string>
    <string name="action_logout">Log Out</string>


    <!--options-->
    <string name="report_thanks_message">Thanks for your report, we will review this voice soon!</string>
    <string name="feedback_thanks_message">Thanks for your feedback to make Vose a better community!</string>
    <string name="option">Options</string>
    <string name="share">Share</string>
    <string name="flag">Flag this post</string>
    <string name="feedback">Feedback</string>
    <string name="flag_message">What\'s wrong?</string>
    <string name="share_message">Share this voice!</string>
    <string name="android_download_url">https://play.google.com/store/apps/details?id=com.voice.app</string>
    <string name="ios_download_url">https://itunes.apple.com/us/app/vose-anonymous-company-voices/id968250575?mt=8</string>
    <string name="share_start">"Someone is talking about </string>
    <string name="share_get_voice_app">*Get the Vose app to learn more about the companies that matter to you</string>
    <string name="share_message_title">Vose: An interesting anonymous post about </string>
    <!--Feedback & Reply-->
    <string name="user_feedback_reply_title">Reply to your feedback</string>
    <string name="user_feedback_reply_again">Reply</string>



    <!--Search-->
    <string name="search_label">search_company</string>
    <string name="search_title">Search!</string>
    <string name="search_to_post_hint">search a company to post...</string>
    <string name="search_hint">search company...</string>
    <string name ="no_search_result">Company not found</string>
    <string name="search_to_post_title">"  Find a company to post"</string>
    <string name="hot_companies_section">Hot Companies</string>
    <string name="hot_companies_section_following">Following Companies</string>


    <!--Loading message-->
    <string name="loading_message">Loading...</string>
    <string name="loading_voices">Loading voices...</string>
    <string name="change_industry_loading_message">Changing industry...</string>
    <string name="loading_comments">Loading comments...</string>

    <!--reminder dialog-->
    <string name="OK">OK</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="search_to_post_reminder">Search or select a company to make your first post</string>

    <!--User create company-->
    <string name="user_create_company_title">Suggest a company</string>
    <string name="user_create_company_button">Suggest Company</string>
    <string name="select_created_company_industry">Industry:</string>
    <string name="create_company_button">Suggest Company</string>
    <string name="create_company_name_hint">Company name</string>
    <string name="create_company_location_hint">Location (Optional)</string>
    <string name="finish_suggest_company_message">Thanks! We will review your suggested company soon and add it to your following list</string>
    <string name="empty_company_message">Please type in company name </string>
    <string name="company_existing_message">This company name already exists! Go to search to find it</string>

    <!--My posts-->
    <string name ="my_posts_title">" My Voices "</string>
    <string name ="user_no_post_message">You have never made a post yet</string>


    <!--Log out-->
    <string name ="Logout_message">Are you sure you want to log out?</string>


    <string name="post_alert_title">Share your voice</string>
    <string name ="no_post_message">no voice yet, be the first one to make a voice!</string>
    <string name="post_alert_post">Post</string>
    <string name="post_alert_cancel">Cancel</string>

    <string name="user_feedback_alert_title">We love to hear your feedback !</string>
    <string name="user_feedback_alert_send">Send</string>
    <string name="user_feedback_alert_cancel">Cancel</string>

    <!--postComments-->
    <string name="send">Send</string>
    <string name="leave_a_comment"> Comment to this voice...</string>
    <string name="no_comment"> no comment to this voice yet</string>
    <string name="already_liked_comment">You\'ve already liked it</string>
    
    <!--rules-->
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="terms_of_service_title">" Terms of Service"</string>
    <string name="community_guidelines"><u>Community Guidelines </u></string>
    <string name="community_guidelines_title">" Community Guidelines"</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="privacy_policy_title">" Privacy Policy"</string>
    <string name="rules_title">" Terms \u0026 Policies"</string>
    <string name="rules_link"><u>Terms \u0026 Policies</u></string>


    <!--Malicious event prevention-->
    <string name="post_warning_message">"We've detected irregular activity from your account, in order to prevent potential spam, please consider reducing the frequency of your posts or your account may be subject to review."</string>
    <string name="post_block_message_head">"We have detected irregular activity from your account and as a precaution have blocked it from posting for "</string>
    <string name="post_block_message_end">" mins."</string>
    <string name="user_block_message">" This account has been blocked for malicious use."</string>
    <string name="post_too_long_message_head">"Your post has "</string>
    <string name="post_too_long_message_end">" characters, more than the max 400 characters allowed, please make it shorter"</string>
</resources>
