<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/background_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:id="@+id/community_guidelines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_guidelines"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            />


        <TextView
            android:id="@+id/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/terms_of_service"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            />

    </LinearLayout>
</LinearLayout>