<?xml version="1.0" encoding="utf-8"?>
<!--must set background color and clicckable otherwise the below activity/fragment will show up-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/background_color"
    >


    <EditText
        android:id="@+id/created_company_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_company_name_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textCursorDrawable = "@null"
        android:singleLine="true" />


    <EditText
        android:id="@+id/created_company_location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_company_location_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textCursorDrawable = "@null"
        android:singleLine="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/select_created_company_industry"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/industry_spinner"
            />

    </LinearLayout>



    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_next"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_company_button"
        android:textColor="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/button"
        />

</LinearLayout>