<?xml version="1.0" encoding="utf-8"?>
<!--must set background color and clicckable otherwise the below activity/fragment will show up-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_industry"
            android:textSize="18sp"
            />
        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/industry_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_location"
            android:textSize="18sp"
            />

        <com.vose.customizedUI.MultiSelectionSpinner
            android:id="@+id/location_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <Button
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_next"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_vose"
        />

</LinearLayout>