<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/background_color"
    >

    <RelativeLayout
        android:id="@+id/progressSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/loading_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/loading_posts"
            android:textSize="20sp"
            android:textColor="@color/transparent_white"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/follow_company_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/follow_company_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_follow_companies"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20dp"
            />

        <ListView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="0dp"
            android:divider="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/follow_company_title"
            android:layout_above="@+id/button_start_vose"
            android:layout_marginBottom="20dp"
            />


        <Button
            android:id="@+id/button_start_vose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"

            android:background="@drawable/button"
            android:text="@string/start_vose" />

    </RelativeLayout>
</RelativeLayout>