<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_below="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo_welcome"
        android:id="@+id/welcome_logo"
        android:layout_centerHorizontal="true"
        />

        <!--Using layout gravity moves the actual TextView, using gravity affects the content of the TextView.-->
        <TextView
            android:id="@+id/welcome_message_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:text="@string/welcome_message_1"
            android:lines="4"
            android:gravity="center_horizontal"
            android:layout_below="@+id/welcome_logo"
            android:lineSpacingExtra="3sp"
            android:layout_centerHorizontal="true" />

        <!--<TextView-->
            <!--android:id="@+id/welcome_message_2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="18dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:textColor="@color/white"-->
            <!--android:text="@string/welcome_message_2"-->
            <!--android:lines="3"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:layout_below="@+id/welcome_message_1"-->
            <!--android:lineSpacingExtra="3sp"-->
            <!--android:layout_centerHorizontal="true" />-->

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_below="@+id/welcome_message_1"
            android:background="@drawable/button"
            android:text="@string/continue_button" />

    </RelativeLayout>


</LinearLayout>